[tool.poetry]
name = "moviesearch"
version = "0.1.0"
description = "The search engine for movie scenes"
authors = ["Keane Moraes <lordvader3002@gmail.com>"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
transformers = "^4.37.0"
pydantic = "^2.5.3"
uvicorn = "^0.27.0"
qdrant-client = "^1.7.1"
pillow = "^10.2.0"
torch = "^2.1.2"
hf-transfer = "^0.1.5"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
